# Drone

BambiplayGit-Fast-Drone-250-tuned_simulation/: .gitignore
BambiplayGit-Fast-Drone-250-tuned_simulation/logs/drone_detect/: build.cmake.000.log.stderr  build.make.000.log.stderr
BambiplayGit-Fast-Drone-250-tuned_simulation/logs/ego_planner/: build.make.000.log.stderr
BambiplayGit-Fast-Drone-250-tuned_simulation/models/q250/: q250.sdf
BambiplayGit-Fast-Drone-250-tuned_simulation/shfiles/: 3drones_demo_goal.sh  3drones_demo_return.sh  autosim-setIMU.sh  autosim.sh  autosim_503_single.sh  autoswarmsim.sh  drone0.sh  drone1.sh  drone2.sh  init_pos.txt  load_3drone_multiprocess.sh  test.sh
BambiplayGit-Fast-Drone-250-tuned_simulation/src/: .rosinstall  dependence.rosinstall
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/: CMakeLists.txt  package.xml
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/cfg/: uwb_id.yaml
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/launch/: draft_node.launch  drift_node.launch  start_draft_estimation.launch  start_in_exp.launch  uwb_cali.launch  uwb_launch_all.launch  uwb_params.launch  uwb_sim.launch
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/scripts/: start.sh
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/src/: 2DRYEFactors.hpp  README.md  draft_node.cpp  drift_node.cpp  old_draft_estimation_node.cpp  playground.cpp  simulator_node.cpp  statistic_cal.cpp  target_pub.cpp  uwb_bridge_node.cpp  uwb_cali.cpp  uwb_sim.cpp
BambiplayGit-Fast-Drone-250-tuned_simulation/src/uwb/uwb_package_info/: UWB package 说明文档.md
PX4-Autopilot/launch/: mavros_posix_d435i_sitl.launch  multi_q250_mavros_sitl.launch
World/: dense_jungle2.world
(+124 files in other folders)
